--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,21 +1,22 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
         <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
-        <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$| async">
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="messages" routerLinkActive="active">Messages</a>
-            </li>
-
+        <ul class="navbar-nav mr-auto">
+            <ng-container *ngIf="accountService.currentUser$| async">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="messages" routerLinkActive="active">Messages</a>
+                </li>
+            </ng-container>
         </ul>
 
-        <div class="dropdown" *ngIf="accountService.currentUser$| async" dropdown>
-            <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
+        <div class="dropdown" *ngIf="(accountService.currentUser$| async) as user" dropdown>
+            <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
             <div class="dropdown-menu" *dropdownMenu>
                 <a class="dropdown-item mt-3">Edit Profile</a>
                 <div class="dropdown-divider"></div>
@@ -24,7 +25,8 @@
             </div>
         </div>
 
-        <form *ngIf="(accountService.currentUser$ | async) === null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
+        <form *ngIf="(accountService.currentUser$ | async) === null" #loginForm="ngForm"
+            class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
 
             <input name="username" [(ngModel)]="model.username" class="form-control mr-sm-2" type="text"
                 placeholder="Username">
