--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,20 +1,20 @@
-<div class="container mt-5">
-    <div class="row">
-        <div class="card shadow-sm border-0">
-            <img *ngIf="member.photoUrl" [src]="member.photoUrl" alt="{{ member.knownAs }}" class="card-img-top" />
-            <div class="card-body">
-                <h5 class="card-title">{{ member.knownAs }}</h5>
-                <p class="card-text"><strong>Username:</strong> {{ member.userName }}</p>
-                <p class="card-text"><strong>Age:</strong> {{ member.age }}</p>
-                <p class="card-text"><strong>Gender:</strong> {{ member.gender }}</p>
-                <p class="card-text"><strong>City:</strong> {{ member.city }}</p>
-                <p class="card-text"><strong>Country:</strong> {{ member.country }}</p>
-                <p class="card-text"><strong>Introduction:</strong> {{ member.introduction }}</p>
-                <p class="card-text"><strong>Looking For:</strong> {{ member.lookingFor }}</p>
-                <p class="card-text"><strong>Interests:</strong> {{ member.intrests }}</p>
-
-                <a href="#" class="btn btn-primary">View Profile</a>
-            </div>
-        </div>
+<div class="card mb-4">
+    <div class="card-img-wrapper">
+        <img src="{{member.photoUrl || './assets/user.png' }}" alt="{{member.knownAs}}" class="card-img-top">
+        <ul class="list-inline member-icons animate text-center">
+            <li class="list-inline-item">
+                <button routerLink="/members/{{member.userName}}" class="btn btn-primary"><i class="fa fa-user"></i></button>
+            </li>
+            <li class="list-inline-item">
+                <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
+            </li>
+            <li class="list-inline-item">
+                <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
+            </li>
+        </ul>
+    </div>
+    <div class="card-body p-1">
+        <h6 class="h6.card-title text-center mb-1"><i class="fa fa-user mr-2"></i>{{member.knownAs}}</h6>
+        <p class="card-text text-muted text-center">{{member.city}}</p>
     </div>
 </div>
