--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -21,10 +21,9 @@
         <div class="dropdown" *ngIf="(accountService.currentUser$| async) as user" dropdown>
             <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
             <div class="dropdown-menu" *dropdownMenu>
-                <a class="dropdown-item mt-3">Edit Profile</a>
+                <a routerLink='/member/edit' class="dropdown-item mt-3">Edit Profile</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
-
             </div>
         </div>
 
