--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -19,7 +19,9 @@
         </ul>
 
         <div class="dropdown" *ngIf="(accountService.currentUser$| async) as user" dropdown>
-            <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
+            <img src="{{user.photoUrl}}" alt="{{user.userName}}">
+            
+            <a class="dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
             <div class="dropdown-menu" *dropdownMenu>
                 <a routerLink='/member/edit' class="dropdown-item mt-3">Edit Profile</a>
                 <div class="dropdown-divider"></div>
