--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -1,1 +1,25 @@
-<p>lists works!</p>
+<div class="text-center mt-3">
+    <h2>{{predicate === "liked" ? "Members I Like" : "Members who like me"}}</h2>
+</div>
+
+<div class="containter mt-3">
+    <div class="row">
+        <div class="btn-group" name="predicate">
+            <button class="btn btn-primary" btnRadio="liked" [(ngModel)] = "predicate" (click)="loadLikes()"> Members I like</button>
+            <button class="btn btn-primary" btnRadio="likedBy" [(ngModel)] = "predicate" (click)="loadLikes()"> Members who like me</button>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-2" *ngFor="let member of members">
+            <app-member-card [member]="member"></app-member-card>
+        </div>
+    </div>
+</div>
+
+<!-- Centered Pagination controls -->
+<div class="d-flex justify-content-center mt-4" *ngIf="pagination">
+    <pagination [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage" [(page)]="pageNumber"
+      (pageChanged)="onPageChange($event)">
+    </pagination>
+  </div>
