--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -6,13 +6,15 @@
                 <button routerLink="/members/{{member.userName}}" class="btn btn-primary"><i class="fa fa-user"></i></button>
             </li>
             <li class="list-inline-item">
-                <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
+                <button class="btn btn-primary" (click)="addLike(member)"><i class="fa fa-heart"></i></button>
             </li>
             <li class="list-inline-item">
                 <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
             </li>
         </ul>
     </div>
+
+
     <div class="card-body p-1">
         <h6 class="h6.card-title text-center mb-1"><i class="fa fa-user mr-2"></i>{{member.knownAs}} , {{member.age}}</h6>
         <p class="card-text text-muted text-center">{{member.city}}</p>
