--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,5 +1,5 @@
-<div class="row" *ngIf="member">
-    <div-col-4>
+<div class="row" >
+    <div class="col-4">
         <div class="card">
             <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
             <div class="card-body">
@@ -23,34 +23,34 @@
             <div class="card-footer">
                 <div class="btn-group d-flex">
                     <button class="brn btn primary">Like</button>
-                    <button class="brn btn success">Message</button>
+                    <button class="brn btn success" (click)="selectTab(3)">Message</button>
                 </div>
             </div>
         </div>
-    </div-col-4>
+    </div>
 
     <div class="col-8">
-        <tabset class="member-tabset">
-            <tab heading='About {{member.knownAs}}'>
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading='About {{member.knownAs}}' (selectTab)="onTabActivated($event)">
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
                 <h4>Looking for</h4>
                 <p>{{member.lookingFor}}</p>
             </tab>
 
-            <tab heading='Intrests'>
+            <tab heading='Intrests' (selectTab)="onTabActivated($event)">
                 <h4>Intrests</h4>
-                <p>{{member.intrests}}</p>
+                <p>{{member.interests}}</p>
             </tab>
 
-            <tab heading='Photos'>
+            <tab heading='Photos' (selectTab)="onTabActivated($event)">
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" 
                 class="ngx-gallery" style=" display: inline-block; margin-bottom: 20px;"></ngx-gallery>
 
             </tab>
 
-            <tab heading='Messages'>
-                <p>Messages will go here</p>
+            <tab heading='Messages' (selectTab)="onTabActivated($event)">
+                <app-member-messages [messages]="messages" [username]="member.userName"></app-member-messages>
             </tab>
         </tabset>
     </div>
