--- a/client/src/app/members/member-card/member-card.component.css
+++ b/client/src/app/members/member-card/member-card.component.css
@@ -56,3 +56,13 @@
 .card .card-body p {
   margin-top: 5px; /* Remove excessive margin from the top of the city text */
 }
+
+@keyframes fa-blink {
+  0% {opacity: 1;}
+  100% {opacity: 0.4;}
+}
+
+.is-online {
+  animation: fa-blink 1.5s linear infinite;
+  color: rgb(1, 189, 42)
+}
