--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -19,7 +19,12 @@
 
 
     <div class="card-body p-1">
-        <h6 class="h6.card-title text-center mb-1"><i class="fa fa-user mr-2"></i>{{member.knownAs}} , {{member.age}}</h6>
+        <h6 class="h6.card-title text-center mb-1">
+            <span [class.is-online]="(presence.onlineUsers$ | async).includes(member.userName)">
+                <i class="fa fa-user mr-2"></i>
+            </span>
+            
+            {{member.knownAs}} , {{member.age}}</h6>
         <p class="card-text text-muted text-center">{{member.city}}</p>
     </div>
 </div>
